--- a/action.yaml
+++ b/action.yaml
@@ -15,10 +15,9 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+    - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 8.0.x
 
-    - name: Validate
-      run: dotnet run --dictionary ${{inputs.polyglot_dictionary_file_path}} --words ${{inputs.words_file_path}} --sentences ${{inputs.sentences_file_path}}
+    - run: dotnet run --dictionary ${{inputs.polyglot_dictionary_file_path}} --words ${{inputs.words_file_path}} --sentences ${{inputs.sentences_file_path}}
+      shell: bash
