--- a/action.yaml
+++ b/action.yaml
@@ -15,6 +15,10 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - uses: actions/checkout@v3
+      with:
+        repository: hmlendea/polyglot-language-validator
+
     - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 8.0.x
