--- a/action.yaml
+++ b/action.yaml
@@ -18,6 +18,7 @@ runs:
     - uses: actions/checkout@v3
       with:
         repository: hmlendea/polyglot-language-validator
+        ref: 'refs/tags/v1.0.0'
 
     - uses: actions/setup-dotnet@v1
       with:
